# llm-from-scratch

./: .gitignore  README.md  activation_functions.py  attention.py  bpe_tokenizer.py  data_loader.py  gpt_model.py  llm.py  plotter.py  pyproject.toml  tokenizer.py  word_tokenizer.py
